--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
     border: 5px solid darkred;
     border-radius: 15px 50px 15px;
     padding: 20px;
-    color: darkred;
-    background-color: white;
+    color: white;
+    background: linear-gradient(to bottom, #E6AFA0 0%, #BF3007 100%);
 }
 .leftpanel
 {
@@ -32,4 +32,51 @@ li
     padding-left: 3px;
     border: 1px solid red;
     border-radius: 50%;
+}
+.icon-bar
+{
+    background-color:red;
+    color: orange;
+}
+.navbar-collapse.in
+{
+    background:white;
+    width: 200px;
+}
+
+@media (max-width: 1200px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
