--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@
      text-align: center;
      margin: 0;
      position: absolute;
-     top: 50%;
-     -ms-transform: translateY(-50%);
-     transform: translateY(-50%);
     border: 5px solid darkred;
     border-radius: 15px 50px 15px;
     padding: 20px;
     color: white;
     background: linear-gradient(to bottom, #E6AFA0 0%, #BF3007 100%);
+    width: auto;
+    overflow:scroll;
 }
 .leftpanel
 {
-    height: 70%;
+    height: 60%;
     margin-top: 50px;
+    width: 10px;
 }
 li
 {
@@ -42,4 +42,18 @@ li
 {
     background:white;
     width: 200px;
+}
+@media screen and (max-width: 480px)
+{
+    .content
+    {
+        width: 150px;
+    }
+}
+@media screen and (max-width: 380px)
+{
+    .content
+    {
+        width: 100px;
+    }
 }
