--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@
     padding: 20px;
     color: white;
     background: linear-gradient(to bottom, #E6AFA0 0%, #BF3007 100%);
-    width: auto;
-    overflow:scroll;
+    overflow:hidden;
 }
 .leftpanel
 {
@@ -62,7 +61,7 @@ li
 {
     .content
     {
-        width: 100px;
+        width: 150px;
     }
     #logo
     {
