--- a/style.css
+++ b/style.css
@@ -1,81 +1,197 @@
-#logo
+.leftpanel
 {
-    width: 250px;
-    background-color: white;
 }
 
+#logo_image
+{
+    float: left;
+    width: 300px;
+    padding: 20px;
+    padding-left: 0px;
+}
+
+/*Steps in Resume to be filled*/
+.steps
+{
+    padding-left: 10px;
+}
+
+.step-element
+{
+    padding: 7px;
+}
+
+.step-no
+{
+    color: white;
+    background-color: #fe6625;
+    padding-right: 3px;
+    padding-left: 3px;
+    /*border: 2px solid #8a1329;*/
+    border-radius: 50%;
+}
+.step-text
+{
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-size: 15px!important;
+    line-height: 20px!important;
+    letter-spacing: .05em!important;
+    text-transform: uppercase;
+    color: #666666;
+}
+.step-text:hover{
+    color: #fe6625;
+}
+#link
+{
+    text-decoration: none;
+}
+.step-text:active{
+    color: #fe6625;
+}
+
+
+
+#preview-btn
+{
+    border: 1px solid #aa1f2e;
+    background-color: #fe6625;
+    border-radius: 30px;
+    padding: 0px 7px 0px 7px;
+    margin-top: 15px;
+    float: right;
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-size: 15px!important;
+    line-height: 20px!important;
+    letter-spacing: .05em!important;
+    text-transform: uppercase;
+    color:white; 
+    margin-right: 20px;
+}
+
+.formarea
+{
+    margin-left: 15px;
+    margin-right: 10px;
+}
+
+label
+{
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-size: 13px!important;
+    line-height: 20px!important;
+    letter-spacing: .05em!important;
+    text-transform: uppercase;
+    color: #666666;
+}
+#next-btn
+{
+    border: 1px solid #aa1f2e;
+    background-color: #fe6625;
+    border-radius: 30px;
+    padding: 0px 7px 0px 7px;
+    margin-top: 15px;
+    float: right;
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-size: 15px!important;
+    line-height: 20px!important;
+    letter-spacing: .05em!important;
+    text-transform: uppercase;
+    color:white;
+     margin-right: 10px;
+}
+#back-btn
+{
+    border: 1px solid #aa1f2e;
+    background-color: #fe6625;
+    border-radius: 30px;
+    padding: 0px 7px 0px 7px;
+    margin-top: 15px;
+    float: left;
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-size: 15px!important;
+    line-height: 20px!important;
+    letter-spacing: .05em!important;
+    text-transform: uppercase;
+    color:white;
+    margin-left: 10px;
+}
 
 
 .content
 {
-     text-align: center;
-     margin: 0;
-     position: absolute;
-    border: 5px solid darkred;
-    border-radius: 15px 50px 15px;
+    text-align: center;
+    margin: 0;
+    position: absolute;
     padding: 20px;
-    color: white;
-    background: linear-gradient(to bottom, #E6AFA0 0%, #BF3007 100%);
+    color: red;
     overflow:hidden;
+    vertical-align:middle;
 }
-.leftpanel
+.rightpanel
 {
-    height: 60%;
-    margin-top: 50px;
-    width: 10px;
+    background-image: linear-gradient(90deg ,#fe6625,  white);
+    height: 100%;
+    position:absolute;
+    float: left;
+    border: 3px solid white;
+    margin: 0px 0px 0px 0px;
+    vertical-align: middle;
+    border-radius: 15% 0% 0% 110%;
+    widows: 100%;
+    border-left-color: #aa1f2e;
+    border-bottom-color: #aa1f2e;
+    border-top-color: #aa1f2e;
 }
-li
+section
 {
-    padding-right: 20px;
-    font-family:monospace;
-    font-weight: bolder;
-    font-size: 15px;
-    
+    vertical-align: middle;
+    margin-top: 70px;
 }
-.icon
+section > img
 {
-    background-color: red;
-    padding-right: 3px;
-    padding-left: 3px;
-    border: 1px solid red;
-    border-radius: 50%;
+    width: 40px;
+    height: 100px;
 }
-.icon-bar
+
+section > h4
 {
-    background-color:red;
-    color: orange;
+    font-size: 25px;
+    font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    letter-spacing: 0;
+    font-weight: 200;
+    font-style: normal;
+    color: #666666;
+    padding: 5px;
 }
-.navbar-collapse.in
+
+section > p
 {
-    background:white;
-    width: 200px;
+    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-style: normal!important;
+    letter-spacing: 0!important;
+    font-size: 14px!important;
+    line-height: 20px!important;
+    padding: 5px;
 }
-@media screen and (max-width: 480px)
+
+@media screen and (max-width: 767px)
 {
-    .content
-    {
-        width: 150px;
-    }
-}
-@media screen and (max-width: 400px)
-{
-    .content
-    {
-        display: none;
-    }
-    #logo
-    {
-        width: 220px;
-    }
     .rightpanel
     {
-        width: 500px;
+        border-radius: 20% 5% 20% 5%;
+        border-color:white;
     }
-}
-@media screen and (max-width: 310px)
-{
-    #logo
+    #back-btn , #next-btn
     {
-        width: 170px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+    .leftpanel
+    {
+        border: 2px solid white;
+        border-bottom-left-radius: 100px;
+        border-bottom-right-radius: 100px;
+        border-bottom-color:#fe6625;
     }
 }
