--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 .leftpanel
 {
+    background-color: white;
+    width: 100%;
+}
+.outercolor
+{
+     background-image: linear-gradient(90deg ,#fe6625,  white);
+    width: 100%;
+    height: 100%;
+    
 }
 
 #logo_image
@@ -179,8 +188,11 @@ section > p
 {
     .rightpanel
     {
-        border-radius: 20% 5% 20% 5%;
+        border-radius: 0% 0% 0% 0%;
         border-color:white;
+        padding: 0px;
+        margin: 0px;
+        border: 0px;
     }
     #back-btn , #next-btn
     {
@@ -189,9 +201,22 @@ section > p
     }
     .leftpanel
     {
-        border: 2px solid white;
+        border: 0px solid white;
         border-bottom-left-radius: 100px;
-        border-bottom-right-radius: 100px;
-        border-bottom-color:#fe6625;
+        border-bottom-right-radius: 0px;
+    }
+}
+@media screen and (min-width: 768px )
+{
+    .outercolor
+    {
+        height: 0%;
+    }
+}
+@media screen and (max-width: 415px)
+{
+   .outercolor
+    {
+        height: 0%;
     }
 }
