--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@
 }
 .step-text
 {
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
-    font-size: 15px!important;
+    font-family: lora , serif;
+    font-size: 18px!important;
     line-height: 20px!important;
     letter-spacing: .05em!important;
     text-transform: uppercase;
@@ -81,7 +81,7 @@
     padding: 0px 7px 0px 7px;
     margin-top: 15px;
     float: right;
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-family: lora , serif;
     font-size: 15px!important;
     line-height: 20px!important;
     letter-spacing: .05em!important;
@@ -98,11 +98,11 @@
 
 label
 {
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
-    font-size: 13px!important;
+    font-family: lora , serif;
+    font-size: 17px!important;
     line-height: 20px!important;
     letter-spacing: .05em!important;
-    text-transform: uppercase;
+    text-transform: capitalize;
     color: #666666;
 }
 #next-btn
@@ -113,7 +113,7 @@ label
     padding: 0px 7px 0px 7px;
     margin-top: 15px;
     float: right;
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-family: lora , serif;
     font-size: 15px!important;
     line-height: 20px!important;
     letter-spacing: .05em!important;
@@ -129,7 +129,7 @@ label
     padding: 0px 7px 0px 7px;
     margin-top: 15px;
     float: left;
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-family: lora , serif;
     font-size: 15px!important;
     line-height: 20px!important;
     letter-spacing: .05em!important;
@@ -179,7 +179,7 @@ section > img
 section > h4
 {
     font-size: 25px;
-    font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-family: lora , serif;
     letter-spacing: 0;
     font-weight: 200;
     font-style: normal;
@@ -189,7 +189,7 @@ section > h4
 
 section > p
 {
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-family: lora , serif;
     font-style: normal!important;
     letter-spacing: 0!important;
     font-size: 14px!important;
@@ -226,7 +226,7 @@ section > p
 }
 #title
 {
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-family: lora , serif;
     font-size: 19px!important;
     font-weight: 700!important;
     line-height: 24px!important;
@@ -264,7 +264,7 @@ li
 }
 .linker
 {
-    font-family: medium-content-sans-serif-font,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Arial,sans-serif!important;
+    font-family:lora , serif;
     font-size: 13px!important;
     line-height: 20px!important;
     letter-spacing: .05em!important;
